--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-xs-12 card-wrapper">
+                        <a href="./period-sex.html">
                         <div class="custom-card-img">
                             <img src="./assets/homepage/Pitman_Jes_March2022.png" width="100%">
                             <div class="light-dot"></div>
@@ -147,11 +148,12 @@
                         <div class="name-plate">
                             <p class='card-title'>Pitman bros break their silence: 'Period sex is just gross'</p>
                             <p class="card-byline">
-                                Words by ... <br>
+                                Words by Maria Couto <br>
                                 Visuals by ...
                             </p>
                             <p class="card-dek">Some Dek</p>
                         </div>
+                        </a>
                     </div>
                 </div>
                 <div class="card-wrapper">
