--- a/bodily-sound-effect.html
+++ b/bodily-sound-effect.html
@@ -8,19 +8,17 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@The Eyeopener" />
-    <meta name="twitter:title" content="Pitman bros break their silence: ‘Period sex is just gross’" />
-    <meta name="twitter:description"
-        content="QUIZ: Which bodily sound effect are you?" />
+    <meta name="twitter:title" content="Take this quiz to find out if you’re a burp, vom, fart or a low grumble" />
+    <meta name="twitter:description" content="QUIZ: Which bodily sound effect are you?" />
     <meta name="twitter:image:src"
-        content="https://thebodyissue.theeyeopener.com/assets/period-sex/Pitman_Jes_March2022.png" />
+        content="https://thebodyissue.theeyeopener.com/assets/bodily-sound-effect/bodilysound_vanessakauk_mar22.jpeg" />
 
     <meta property="og:url" content="" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Pitman bros break their silence: ‘Period sex is just gross’" />
-    <meta property="og:description"
-        content="QUIZ: Which bodily sound effect are you?" />
+    <meta property="og:title" content="Take this quiz to find out if you’re a burp, vom, fart or a low grumble" />
+    <meta property="og:description" content="QUIZ: Which bodily sound effect are you?" />
     <meta property="og:image"
-        content="https://thebodyissue.theeyeopener.com/https://thebodyissue.theeyeopener.com/assets/period-sex/Pitman_Jes_March2022.png" />
+        content="https://thebodyissue.theeyeopener.com/assets/bodily-sound-effect/bodilysound_vanessakauk_mar22.jpeg" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
@@ -44,7 +42,7 @@
 
     <style>
         .article-head-img {
-            background-image: url(./assets/period-sex/Pitman_Jes_March2022.png);
+            background-image: url(./assets/bodily-sound-effect/bodilysound_vanessakauk_mar22.jpeg);
             width: 100%;
             height: 70vh;
             background-position: center;
@@ -52,10 +50,14 @@
             background-size: cover;
             margin: 25px 0;
         }
+
+        .question, .answers {
+            margin-bottom: 40px;
+        }
     </style>
 
     <title>
-        Pitman bros break their silence: 'Period sex is just gross'
+        Which bodily sound effect are you?
     </title>
 </head>
 
@@ -72,7 +74,7 @@
     <div class="container">
         <a href="./index.html"
             class="fixed-top top-bar d-flex justify-content-center align-items-center shadow p-3 mb-5 bg-body rounded">
-            <span class="home-page-link">The body issue</span>
+            <span class="home-page-link">The Body Issue</span>
         </a>
 
         <section class="article-head-img gs_reveal">
@@ -81,14 +83,13 @@
 
         <section class="article-header gs_reveal">
             <h1 class="article-title">
-                <h1 class='text-font-need-to-filled-in'><b><span class='text-font-playfair-display'>Pitman bros break
-                            their silence: ‘Period sex is just gross’
-                </h1>
+                <h1 class='text-font-need-to-filled-in'><b><span class='text-font-playfair-display'>QUIZ: Which bodily
+                            sound effect are you?</h1>
 
-                <h2>QUIZ: Which bodily sound effect are you?</h2>
+                <h2>Take this quiz to find out if you’re a burp, vom, fart or a low grumble</h2>
 
                 <div class="article-bylines">
-                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Words by Maria Couto
+                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Words by Alexandra Holyk
                         </span></h4>
                     <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Photo by ...
                         </span></h4>
@@ -97,93 +98,153 @@
 
         <section class="article-content">
             <p class='text-font-need-to-filled-in gs_reveal'>
-
-                A riot broke out in Ryerson’s own Pitman Hall on Tuesday evening as local frat boys from Beta Kappa
-                Eggy—Chad, Brad and Thad— denounced period sex and encouraged others to do the same.
+                Whether we do it on purpose or not, our bodies make all sorts of different sounds all the time. However,
+                some sounds just perfectly embody (no pun intended) our personalities in a way that words simply can’t.
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
-
-                The comment instigated Pitman Hall’s menstruating population to accuse the trio of being misogynistic
-                virgins—to their hostile and <em>completely</em> convincing denial.
+                Take this quiz to determine which bodily sound effect best describes you:
             </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
 
-                We sat down with the three self-proclaimed trailblazers—who are taking cover in their unvacuumed
-                dorm-room-turned-“party pad”—to understand their motives behind the movement.
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+            <div class="question gs_reveal">
+                <p><strong>
+                        What do you do when you get hiccups?
+                    </strong></p>
+                <ol type="A">
+                    <li>Scare myself by looking at my student debt to make the hiccups go away.</li>
+                    <li>Drink water, maybe juice if I’m feeling a little fruity.</li>
+                    <li>Hyperfixate on the pattern of hiccups and count the seconds in between them like lightning
+                        during a thunderstorm.</li>
+                    <li>I hold my breath, say the name of a person I believe is talking about me three times and
+                        intensely think about them until my hiccups either go away or I come up with someone else who
+                        could be talking shit.</li>
 
-                “Dude, it was just the thought of cleaning up that mess…It was enough to make me hurl,” Chad said from his
-                favourite spot on their Cheeto-dust-stained couch. “I had to say something.”
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+                </ol>
+            </div>
 
-                “The thing is, how can females even expect us to have enough towels for period sex? You’re telling me I have
-                to use my one and only shower towel? That’s just disgusting, man.”
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+            <div class="question gs_reveal">
+                <p><strong>
+                        You see your ex’s mom in a Shoppers Drug Mart. You…
+                    </strong></p>
+                <ol type="A">
+                    <li>You make sure SHE says Hi to YOU first and proceed to tell her how AMAZING you’re doing and that
+                        you’re WAY better off now.</li>
+                    <li>Avoid eye contact at all costs and hide in the greeting card aisle. </li>
+                    <li>Say hello and ask her how her kid’s doing—you were their parents’ favourite partner, so you
+                        deserve to know the full tea. </li>
+                    <li>Take a picture with her and send it to your ex with a tasteful ‘YO MAMA’ joke. </li>
+                </ol>
+            </div>
 
-                “Totally bro, and honestly I’d just be scared in general,” Brad added with a solemn head shake from his seat
-                next to the fist-sized hole in the wall.
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+            <div class="question gs_reveal">
+                <p><strong>
+                        How do you approach your lactose intolerance?
+                    </strong></p>
+                <ol type="A">
+                    <li>I just raw dog it. #YOLO, amirite? Sure I’ll be sitting on the toilet completely undressed for
+                        hours due to the intensity of the horror that is exiting me, but it’s all worth it for a little
+                        chocolate ice cream.</li>
+                    <li>If I even smell animal milk, I take my vanilla-flavoured lactose intolerance pill, curl up into
+                        a ball and pray it’s all going to be OK.</li>
+                    <li>It’s not a big deal—sometimes I’ll take my pill, sometimes I won’t. If someone offers me a
+                        mozzarella stick I won’t turn it down, ya know?</li>
+                    <li>Lactose intolerance? I thought everyone shits their pants after a milkshake.</li>
 
-                “I mean you saw how crazy those girls got when we said how gross it is, now imagine how much worse it
-                could’ve gotten if they were all on their periods? Have you ever heard how female praying mantises bite the
-                heads off the males after they bang? These chicks aren’t that different.”
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
 
-                Laughs emmenated from the three as they exchanged high fives, exposing their matching yellow armpit stains.
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+                </ol>
+            </div>
 
-                “But in all seriousness,” said Brad, gathering the gang back to the matter at hand. “If a female was on her
-                period and asked me for head, there’s no way she’d ever be invited back here.”
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+            <div class="question gs_reveal">
+                <p><strong>
+                        When you watch a sad movie, how are you reacting?
+                    </strong></p>
+                <ol type="A">
+                    <li>Throwing up</li>
+                    <li>Shitting</li>
+                    <li>Screaming</li>
+                    <li>Crying</li>
 
-                “Dude, are you saying that under normal circumstances, you <em>would</em> do that?” Thad asked, before sticking his
-                hand down his pants; scratching, deep in thought.
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
 
-                “I would <em>never—</em>and I mean <em>never</em>—go down on a girl. That’s the hole they pee from, no way is my mouth going
-                near that,” he said before taking a hit from their communal Juul. “Well, that’s what Joe Rogan says anyway.”
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+                </ol>
+            </div>
 
-                Chad joined in: “It’s not like girls can even orgasm, so what would be the point?”
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+            <div class="question gs_reveal">
+                <p><strong>
+                        You’re hungover at girls’ brunch. What do you do?
+                    </strong></p>
+                <ol type="A">
+                    <li>The best way to cure a hangover is to never stop drinking. Bottomless mimosas baby!</li>
+                    <li>I pop the Advil-Gravol combo along with my vanilla-flavoured lactose intolerance pill, of
+                        course.</li>
+                    <li>If I’m hungover, then everyone is hungover with me, whether they drank or not. Match the energy
+                        or leave. </li>
+                    <li>I simply didn’t make it to girls’ brunch because I couldn’t get out of bed. </li>
 
-                <em>The Eyeopener</em> would like to clarify that Chad appeared to be speaking strictly from his personal experience.
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
 
-                When asked how many women frequent the “party pad” and if their views may be affecting those attendance
-                rates, Chad, Brad and Thad exchanged sideways glances.
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+                </ol>
+            </div>
 
-                “Uhhhh, well, you know, lots, we get lots of those up here,” Chad said. “Lots from other schools mostly.”
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+            <div class="question gs_reveal">
+                <p><strong>
+                        What’s your zodiac sign?
+                    </strong></p>
+                <ol type="A">
+                    <li>Air (Aquarius, Gemini, Libra)</li>
+                    <li>Earth (Capricorn, Taurus, Virgo)</li>
+                    <li>Fire (Aries, Leo, Sagittarius)</li>
+                    <li>Water (Pisces, Cancer, Scorpio) </li>
+                </ol>
+            </div>
 
-                “And you know, it’s only the beginning of the semester so we have yet to meet some from here, but when we
-                do…if the bed‘s a rockin’ don’t come a knockin’—you know what I’m sayin,’” Brad said, elbowing Chad and
-                Thad, knowingly.
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
+            <div class="question gs_reveal">
+                <p><strong>
+                        Quick! It’s the apocalypse and you can only keep one personal item to survive. It’s…
+                    </strong></p>
+                <ol type="A">
+                    <li>My juicy BBL, the zombies will chase it and bounce off as if they were running at a medicine
+                        ball. </li>
+                    <li>My vanilla-flavoured lactose intolerance pill.</li>
+                    <li>My Pentatonix Christmas Deluxe vinyl album.</li>
+                    <li>My will to live, laugh and love.</li>
 
-                What they think they know exactly, we at <em>The Eyeopener</em> can’t be sure.
-            </p>
-            <p class='text-font-need-to-filled-in gs_reveal'>
 
-                ***Due to white men attempting to appropriate Toronto slang, most answers were run through a translator
-                before print.
+                </ol>
+            </div>
+            <p style="text-align:center">
+                <strong>ANSWERS</strong>
             </p>
-<!-- 
+
+            <div class="answers gs_reveal">
+                <p><strong>Mostly As: A splash of vom </strong></p>
+                <p>This one can be a fun surprise! You hope for a clean belch, but instead your 9 a.m. leftover chicken
+                    nuggets with a hint of BBQ sauce come up for a second round of digestion. Mmm, mmm, mmm, the
+                    flavours are actually melting on your tongue and sliding back down your throat.
+                </p>
+            </div>
+
+            <div class="answers gs_reveal">
+                <p><strong>Mostly Bs: The low grumble of your irritable bowel syndrome-ridden tummy</strong></p>
+                <p>She’s a shy girl, but she makes her presence known when she needs to. Maybe you’re not a
+                    confrontational person and that’s OK. But if you let your emotions bubble up inside of you, they’re
+                    gonna come out like a burning hot flame—similar to that of your bowel movements—sooner or later.</p>
+            </div>
+
+            <div class="answers gs_reveal">
+                <p><strong>Mostly Cs: A full-fledged, powerful, no-shame burp
+                    </strong></p>
+                <p>This one stems from the deepest bellows of your body. As the burp comes up for air like a humpback
+                    whale in the ocean, you realize you are no longer in control of your actions and just accept that
+                    this belch will be heard by everyone on the planet. Like a mating call to another gassy fellow, the
+                    burp is a low, almost vibrato-like sound that earns either the respect, disgust—or both—of those
+                    around you, thus marking your territory as the alpha whale in the group.</p>
+            </div>
+
+            <div class="answers gs_reveal">
+                <p><strong>Mostly Ds: A fart that you so desperately tried to keep between your cheeks but slips out in
+                        a silent lecture hall</strong></p>
+                <p>It eez what it eez.
+                </p>
+            </div>
+            <!-- 
             <div class="return-home">
                 <div><a href="./index.html">Return to Homepage</a></div>
             </div> -->
