--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <br>
     <section class="cards container">
         <div class="row">
-            <div class="col-md-6 col-xs-12">
-                <div class="card-wrapper">
+            <div class="col-lg-6 col-xs-12">
+                <div class="card-wrapper gs_reveal ">
                     <div class="custom-card-img">
                         <img src="./assets/homepage/LizzyEd_JesMason_Feb2022.png" width="100%">
                         <div class="light-dot"></div>
@@ -46,10 +46,9 @@
                             Words by ... <br>
                             Visuals by ...
                         </p>
-                        <p class="card-dek">Some Dek</p>
                     </div>
                 </div>
-                <div class="card-wrapper">
+                <div class="card-wrapper gs_reveal ">
                     <div class="custom-card-img">
                         <img src="./assets/homepage/VulvaListicle_LailaAmer_Mar9.jpg" width="100%">
                         <div class="light-dot"></div>
@@ -60,10 +59,10 @@
                             Words by Heidi Lee <br>
                             Visuals by ...
                         </p>
-                        <p class="card-dek">The Eye has rounded up the best resources to celebrate the diversity of vulvas</p>
+
                     </div>
                 </div>
-                <div class="card-wrapper">
+                <div class="card-wrapper gs_reveal ">
                     <div class="custom-card-img">
                         <img src="./assets/homepage/BodyHorror_March2022.png" width="100%">
                         <div class="light-dot"></div>
@@ -74,13 +73,12 @@
                             Words by ... <br>
                             Visuals by ...
                         </p>
-                        <p class="card-dek">Some Dek</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-xs-12">
+            <div class="col-lg-6 col-xs-12">
                 <div class="row">
-                    <div class="col-lg-6 col-xs-12 card-wrapper">
+                    <div class="col-lg-6 col-xs-12 card-wrapper gs_reveal ">
                         <div class="custom-card-img">
                             <img src="./assets/homepage/AdviceColumn_LailaAmer_Mar9.png" width="100%">
                             <div class="light-dot"></div>
@@ -91,11 +89,10 @@
                                 Words by Abby Hughes<br>
                                 Visuals by
                             </p>
-                            <p class="card-dek">Ryerson assistant professor and nurse practitioner Erin Ziegler answers
-                                your questions about the strange and fascinating bodies we live in</p>
+
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xs-12 card-wrapper">
+                    <div class="col-lg-6 col-xs-12 card-wrapper gs_reveal ">
                         <div class="custom-card-img">
                             <img src="./assets/homepage/Katya_Jian Von Maltman Esmane_March2022.png" width="100%">
                             <div class="light-dot"></div>
@@ -106,11 +103,10 @@
                                 Words by ... <br>
                                 Visuals by ...
                             </p>
-                            <p class="card-dek">Some Dek</p>
                         </div>
                     </div>
                 </div>
-                <div class="card-wrapper">
+                <div class="card-wrapper gs_reveal ">
                     <div class="custom-card-img">
                         <img src="./assets/homepage/DestigmatizingPeriod_LailaAmer_Mar9.png" width="100%">
                         <div class="light-dot"></div>
@@ -121,26 +117,26 @@
                             Words by Cassandra Earle <br>
                             Visuals by ...
                         </p>
-                        <p class="card-dek">Some Dek</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 col-xs-12 card-wrapper">
-                        <div class="custom-card-img">
-                            <img src="./assets/homepage/BodilySounds_VanessaKauk_March2022.png" width="100%">
-                            <div class="light-dot"></div>
-                        </div>
-                        <div class="name-plate">
-                            <p class='card-title'>Which bodily sound effect are you?</p>
-                            <p class="card-byline">
-                                Words by Alexandra Holyk <br>
-                                Visuals by ...
-                            </p>
-                            <p class="card-dek">Take this quiz to find out if you’re a burp, vom, fart or a low grumble</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-xs-12 card-wrapper">
-                        <a href="./period-sex.html">
+                    <a href='./bodily-sound-effect.html'>
+                        <div class="col-lg-6 col-xs-12 card-wrapper gs_reveal ">
+                            <div class="custom-card-img">
+                                <img src="./assets/homepage/BodilySounds_VanessaKauk_March2022.png" width="100%">
+                                <div class="light-dot"></div>
+                            </div>
+                            <div class="name-plate">
+                                <p class='card-title'>Which bodily sound effect are you?</p>
+                                <p class="card-byline">
+                                    Words by Alexandra Holyk <br>
+                                    Visuals by ...
+                                </p>
+                            </div>
+                    </a>
+                </div>
+                <div class="col-lg-6 col-xs-12 card-wrapper gs_reveal ">
+                    <a href="./period-sex.html">
                         <div class="custom-card-img">
                             <img src="./assets/homepage/Pitman_Jes_March2022.png" width="100%">
                             <div class="light-dot"></div>
@@ -151,30 +147,30 @@
                                 Words by Maria Couto <br>
                                 Visuals by ...
                             </p>
-                            <p class="card-dek">Some Dek</p>
                         </div>
-                        </a>
-                    </div>
+                    </a>
                 </div>
-                <div class="card-wrapper">
-                    <div class="custom-card-img">
-                        <img src="./assets/homepage/ShadiB_March2022.png" width="100%">
-                        <div class="light-dot"></div>
-                    </div>
-                    <div class="name-plate">
-                        <p class='card-title'> A Trans Body is a Beautiful Body</p>
-                        <p class="card-byline">
-                            Words by ... <br>
-                            Visuals by ...
-                        </p>
-                        <p class="card-dek">Some Dek</p>
-                    </div>
+            </div>
+            <div class="card-wrapper gs_reveal ">
+                <div class="custom-card-img">
+                    <img src="./assets/homepage/ShadiB_March2022.png" width="100%">
+                    <div class="light-dot"></div>
+                </div>
+                <div class="name-plate">
+                    <p class='card-title'> A Trans Body is a Beautiful Body</p>
+                    <p class="card-byline">
+                        Words by ... <br>
+                        Visuals by ...
+                    </p>
                 </div>
             </div>
         </div>
+        <div class="bottom-img gs_reveal">
+            <img src="./assets/Silhouette_final_LailaAmer_Mar29_.png" width="100%">
+        </div>
     </section>
 
-    <section class="credits">
+    <section class="credits ">
     </section>
 
     <!-- <footer>
