--- a/period-sex.html
+++ b/period-sex.html
@@ -20,7 +20,7 @@
     <meta property="og:description"
         content="Reports say they’d much rather wait a week before boning on Cheeto-stained common room couch" />
     <meta property="og:image"
-        content="https://thebodyissue.theeyeopener.com/https://thebodyissue.theeyeopener.com/assets/period-sex/Pitman_Jes_March2022.png" />
+        content="https://thebodyissue.theeyeopener.com/assets/period-sex/Pitman_Jes_March2022.png" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
@@ -72,7 +72,7 @@
     <div class="container">
         <a href="./index.html"
             class="fixed-top top-bar d-flex justify-content-center align-items-center shadow p-3 mb-5 bg-body rounded">
-            <span class="home-page-link">The body issue</span>
+            <span class="home-page-link">The Body Issue</span>
         </a>
 
         <section class="article-head-img gs_reveal">
