--- a/bodily-sound-effect.html
+++ b/bodily-sound-effect.html
@@ -8,15 +8,15 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@The Eyeopener" />
-    <meta name="twitter:title" content="Take this quiz to find out if you’re a burp, vom, fart or a low grumble" />
-    <meta name="twitter:description" content="QUIZ: Which bodily sound effect are you?" />
+    <meta name="twitter:title" content="QUIZ: Which bodily sound effect are you?" />
+    <meta name="twitter:description" content="Take this quiz to find out if you’re a burp, vom, fart or a low grumble" />
     <meta name="twitter:image:src"
         content="https://thebodyissue.theeyeopener.com/assets/bodily-sound-effect/bodilysound_vanessakauk_mar22.jpeg" />
 
     <meta property="og:url" content="" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Take this quiz to find out if you’re a burp, vom, fart or a low grumble" />
-    <meta property="og:description" content="QUIZ: Which bodily sound effect are you?" />
+    <meta property="og:title" content="QUIZ: Which bodily sound effect are you?" />
+    <meta property="og:description" content="Take this quiz to find out if you’re a burp, vom, fart or a low grumble" />
     <meta property="og:image"
         content="https://thebodyissue.theeyeopener.com/assets/bodily-sound-effect/bodilysound_vanessakauk_mar22.jpeg" />
 
