--- a/index.html
+++ b/index.html
@@ -106,18 +106,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-wrapper gs_reveal ">
-                    <div class="custom-card-img">
-                        <img src="./assets/homepage/DestigmatizingPeriod_LailaAmer_Mar9.png" width="100%">
-                        <div class="light-dot"></div>
-                    </div>
-                    <div class="name-plate">
-                        <p class='card-title'>How social media taught me to live with chronic illnesses</p>
-                        <p class="card-byline">
-                            Words by Cassandra Earle <br>
-                            Visuals by ...
-                        </p>
-                    </div>
+                <div class="card-wrapper gs_reveal">
+                    <a href="./destigmatizing-period.html">
+                        <div class="custom-card-img">
+                            <img src="./assets/homepage/DestigmatizingPeriod_LailaAmer_Mar9.png" width="100%">
+                            <div class="light-dot"></div>
+                        </div>
+                        <div class="name-plate">
+                            <p class='card-title'>How social media taught me to live with chronic illnesses</p>
+                            <p class="card-byline">
+                                Words by Cassandra Earle <br>
+                                Visuals by ...
+                            </p>
+                        </div>
+                    </a>
                 </div>
                 <div class="row">
                     <a href='./bodily-sound-effect.html'>
