--- a/destigmatizing-period.html
+++ b/destigmatizing-period.html
@@ -54,6 +54,7 @@
         blockquote {
             color: #980000;
             font-size: 20px;
+            margin: 50px 0;
         }
     </style>
 
@@ -92,7 +93,7 @@
                 <div class="article-bylines">
                     <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Words by Cassandra Earle
                         </span></h4>
-                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Photo by ...
+                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Visuals by Laila Amer
                         </span></h4>
                 </div>
         </section>
@@ -162,7 +163,7 @@
                 All of these conditions connect and intertwine in the reproductive system, begging the question: what
                 came first, the chicken or the egg?
                 <img src="./assets/destigmatizing-period/DestigmatizingPeriodsAsset2_LailaAmer_Mar9.png"
-                    class="float-center">
+                    class="float-center" width="250px">
             </p>
 
 
@@ -219,7 +220,7 @@
                 daily updates on stories about what it’s like to live with chronic illness and humourous reels to convey
                 information in an accessible way.
                 <img src="./assets/destigmatizing-period/DestigmatizingPeriods_Asset1_LailaAmer_Mar9.png"
-                    class="float-center">
+                    class="float-center" width="250px">
             </p>
 
 
