--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <div class="col-lg-6 col-xs-12">
                 <div class="row">
                     <div class="col-lg-6 col-xs-12 card-wrapper gs_reveal ">
+                        <a href="./advice-column.html">
                         <div class="custom-card-img">
                             <img src="./assets/homepage/AdviceColumn_LailaAmer_Mar9.png" width="100%">
                             <div class="light-dot"></div>
@@ -87,10 +88,11 @@
                             <p class='card-title'>Ask a Rye nurse practitioner: Is my body weird? </p>
                             <p class="card-byline">
                                 Words by Abby Hughes<br>
-                                Visuals by
+                                Visuals by Laila Amer
                             </p>
 
                         </div>
+                        </a>
                     </div>
                     <div class="col-lg-6 col-xs-12 card-wrapper gs_reveal ">
                         <div class="custom-card-img">
