--- a/advice-column.html
+++ b/advice-column.html
@@ -86,7 +86,7 @@
 
         <section class="article-header gs_reveal">
             <h1 class="article-title">
-                <h1 class='text-font-need-to-filled-in'><b><span class='text-font-playfair-display'>Ask a Rye nurse
+                <h1 class='text-font-need-to-filled-in'>Ask a Rye nurse
                             practitioner: Is my body weird?</h1>
 
                 <h2>Ryerson assistant professor and nurse practitioner Erin Ziegler answers your questions about the
