--- a/bodily-sound-effect.html
+++ b/bodily-sound-effect.html
@@ -83,7 +83,7 @@
 
         <section class="article-header gs_reveal">
             <h1 class="article-title">
-                <h1 class='text-font-need-to-filled-in'><b><span class='text-font-playfair-display'>QUIZ: Which bodily
+                <h1 class='text-font-need-to-filled-in'>QUIZ: Which bodily
                             sound effect are you?</h1>
 
                 <h2>Take this quiz to find out if you’re a burp, vom, fart or a low grumble</h2>
