--- a/destigmatizing-period.html
+++ b/destigmatizing-period.html
@@ -85,7 +85,7 @@
 
         <section class="article-header gs_reveal">
             <h1 class="article-title">
-                <h1 class='text-font-need-to-filled-in'><b><span class='text-font-playfair-display'>How social media
+                <h1 class='text-font-need-to-filled-in'>How social media
                             taught me to live with chronic illnesses</h1>
 
                 <h2>After surgery and a diagnosis, social media helped me heal</h2>
