--- a/index.html
+++ b/index.html
@@ -49,18 +49,19 @@
                     </div>
                 </div>
                 <div class="card-wrapper gs_reveal ">
-                    <div class="custom-card-img">
-                        <img src="./assets/homepage/VulvaListicle_LailaAmer_Mar9.jpg" width="100%">
-                        <div class="light-dot"></div>
-                    </div>
-                    <div class="name-plate">
-                        <p class='card-title'>Vulva-tastic! Learning to love your labia</p>
-                        <p class="card-byline">
-                            Words by Heidi Lee <br>
-                            Visuals by ...
-                        </p>
-
-                    </div>
+                    <a href="./vulva-tastic-listicle.html">
+                        <div class="custom-card-img">
+                            <img src="./assets/homepage/VulvaListicle_LailaAmer_Mar9.jpg" width="100%">
+                            <div class="light-dot"></div>
+                        </div>
+                        <div class="name-plate">
+                            <p class='card-title'>Vulva-tastic! Learning to love your labia</p>
+                            <p class="card-byline">
+                                Words by Heidi Lee <br>
+                                Visuals by ...
+                            </p>
+                        </div>
+                    </a>
                 </div>
                 <div class="card-wrapper gs_reveal ">
                     <div class="custom-card-img">
@@ -80,18 +81,18 @@
                 <div class="row">
                     <div class="col-lg-6 col-xs-12 card-wrapper gs_reveal ">
                         <a href="./advice-column.html">
-                        <div class="custom-card-img">
-                            <img src="./assets/homepage/AdviceColumn_LailaAmer_Mar9.png" width="100%">
-                            <div class="light-dot"></div>
-                        </div>
-                        <div class="name-plate">
-                            <p class='card-title'>Ask a Rye nurse practitioner: Is my body weird? </p>
-                            <p class="card-byline">
-                                Words by Abby Hughes<br>
-                                Visuals by Laila Amer
-                            </p>
+                            <div class="custom-card-img">
+                                <img src="./assets/homepage/AdviceColumn_LailaAmer_Mar9.png" width="100%">
+                                <div class="light-dot"></div>
+                            </div>
+                            <div class="name-plate">
+                                <p class='card-title'>Ask a Rye nurse practitioner: Is my body weird? </p>
+                                <p class="card-byline">
+                                    Words by Abby Hughes<br>
+                                    Visuals by Laila Amer
+                                </p>
 
-                        </div>
+                            </div>
                         </a>
                     </div>
                     <div class="col-lg-6 col-xs-12 card-wrapper gs_reveal ">
