--- a/period-sex.html
+++ b/period-sex.html
@@ -81,7 +81,7 @@
 
         <section class="article-header gs_reveal">
             <h1 class="article-title">
-                <h1 class='text-font-need-to-filled-in'><b><span class='text-font-playfair-display'>Pitman bros break
+                <h1 class='text-font-need-to-filled-in'>Pitman bros break
                             their silence: ‘Period sex is just gross’
                 </h1>
 
